--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
 title: Welcome to RafSyn17's homepage!
-description: Here you can a lot about my thoughts.
+description: Me and my thoughts
